Fix some mobile layout

--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
     <a href="#about">
         <div>>></div>
         about</a>
-    <a href="#work_experience">
+    <a href="#work">
         <div>>></div>
-        work experience</a>
+        work</a>
     <a href="#projects">
         <div>>></div>
         projects</a>
@@ -32,7 +32,6 @@
     <div class="section" id="about">
         <div class="title">about</div>
         <div class="content">
-            <img id="profile-pic" src="assets/img/johannes-ekengren.jpg" alt="Johannes Ekengren"/>
             <article>
                 <p>
                     My name is Johannes Ekengren, and I am a software engineer. I am coming up on 10 years as a software
@@ -41,6 +40,7 @@
                     game called Godbreakers, which were composed of a smaller team where I had a big impact on shaping
                     the game. It truly was a passion project which I am very proud of.
                 </p>
+                <img id="profile-pic" src="assets/img/johannes-ekengren.jpg" alt="Johannes Ekengren"/>
                 <p>
                     Please reach out if you want to work together or just want to connect, and please check out my work
                     experience and projects down below.
@@ -52,7 +52,7 @@
             </article>
         </div>
     </div>
-    <div class="section" id="work_experience">
+    <div class="section" id="work">
         <div class="title">work experience</div>
         <div class="content">
             <div class="grid">
